# am-i-even-or-odd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
am_i_even_or_odd/: __init__.py  checker.py  cli.py
tests/: test_checker.py  test_cli.py
